--- a/nwjs-may-2015/app.nw/package.json
+++ b/nwjs-may-2015/app.nw/package.json
@@ -10,7 +10,7 @@
   "window": {
     "title": "Dummy demo",
     "icon": "icon.png",
-    "toolbar": false,
+    "toolbar": true,
     "frame": true,
     "width": 400,
     "height": 400,
